Fixed images not fitting to borders

--- a/style.css
+++ b/style.css
@@ -75,6 +75,57 @@ html,body{
     margin-right: auto;
     margin-left: auto;
     min-height:100%;
+    height: fit-content;
+}
+
+.shopimg img{
+    width: 50vh;
+}
+
+.shopimg{
+    width: fit-content;
+    border: 3px solid rgba(229, 225, 236, 1.00);
+    border-top: 30px solid rgba(229, 225, 236, 1.00);
+    border-radius: 5px;
+    box-shadow: 0px 0px 30px rgba(42, 44, 42, 0.25);
+    -moz-box-shadow: 0px 0px 30px rgba(42, 44, 42, 0.25);
+    -webkit-box-shadow: 0px 0px 30px rgba(42, 44, 42, 0.25);
+    -khtml-box-shadow: 0px 0px 30px rgba(42, 44, 42, 0.25);
+    width: fit-content;
+}
+
+.shopimg{
+    height: fit-content;
+    width: fit-content;
+    position: relative;
+}
+
+.post{
+    height: fit-content;
+    width: fit-content;
+    margin: 25px;
+}
+
+.post p{
+    top: 23px;
+    font-family: 'Roboto';
+    z-index: 2;
+    margin: 0px;
+    font-size: 13px;
+    color: #4a6c78;
+    text-align: center;
+    position: relative;
+}
+
+.buttons img{
+    height: 12px;
+    top: 40px;
+    position: relative;
+    z-index: 2;
+}
+
+.buttons{
+    margin-left: 10px;
 }
 
 .homepageslider{
